# youtubeVideosToGuides

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
conductor/tracks/project-setup_20260323/: index.md  metadata.json  plan.md  spec.md
ytguide/: __init__.py  cli.py  guide.py  images.py  output.py  templates.py  transcript.py  video.py
